--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 				</div>
 			</div>
 		</div>
-			<script src="js/app.js"></script>
+			<script src="app.js"></script>
 			<script src="js/jquery.js"></script>
 			<script src="js/bootstrap.js"></script>
 		</body>
