--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-			<link rel="stylesheet" href="custom.css">
+			<link rel="stylesheet" href="css/custom.css">
 
 			<!--[if lt IE 9]>
 				<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -32,7 +32,7 @@
 		
 		<nav class="navbar navbar-expand-md navbar-light bg-y sticky-top">
 			<a class="navbar-brand" href=#">
-				<img class="img-fluid rounded mx-auto d-block" src="bicycle.jpg" alt="Logo" width="40" height="40">
+				<img class="img-fluid rounded mx-auto d-block" src="images/bicycle.jpg" alt="Logo" width="40" height="40">
 			</a>
 			
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ourNavbar">
@@ -70,23 +70,23 @@
 				<div class="col-sm-8">
 					<h3 class = "text-center font-weight-bold" >Rodzaje rowerów</h3>
 					<h4 class = "text-center">Rower miejski</h4>
-					<img class="img-fluid rounded mx-auto d-block" src="rower-holender.jpg" alt="miejski" width="460" height="345">
+					<img class="img-fluid rounded mx-auto d-block" src="images/rower-holender.jpg" alt="miejski" width="460" height="345">
 					<hr>
 					<p class = "text-justify">Rower przeznaczony do jazdy w mieście. Tradycyjny rower miejski, tak zwany <i>holender</i>, zbudowany jest najczęściej na kołach 28-calowych (choć spotyka się również rowery z kołami 26- i 27-calowymi), posiada giętą, szeroką kierownicę, krótką ramę i szerokie siodełko umożliwiające jazdę w pozycji wyprostowanej. Posiada on też zwykle lampki zasilane z dynama, komplet błotników, osłonę na łańcuch, nóżkę, bagażnik tylny, czasem osłonę tylnego koła czy koszyk.</p>
 					<hr>
 					<h4 class = "text-center">Rower górski (MTB)</h4>
-					<img class="img-fluid rounded mx-auto d-block" src="rower-gorski.jpg" alt="gorski" width="460" height="345">
+					<img class="img-fluid rounded mx-auto d-block" src="images/rower-gorski.jpg" alt="gorski" width="460" height="345">
 					<hr>
 					<p class = "text-justify">Klasa rowerów, których przeznaczeniem jest jazda w terenie trudniejszym, niż pozwalają na to rowery szosowe czy trekingowe, np. górskie ścieżki, szlaki leśne, specjalne tory przeszkód. W porównaniu do rowerów szosowych oraz trekkingowych, rowery MTB są cięższe, ze względu na mającą gwarantować większą wytrzymałość konstrukcję. Rowery górskie, celem poprawy przyczepności i możliwości pokonania szybko i bezpiecznie wymagającego terenu (rock gardeny, rampy) w rowerach profesjonalnych oraz komfortu jazdy w rowerach amatorskich i turystycznych, bardzo często wyposaża się w różnego rodzaju amortyzatory, które również mają istotny wpływ na masę pojazdu. Amortyzatory instaluje się głównie w widelcu i ramie; amortyzowane sztyce siodełka i mostki nie są popularne w rowerach profesjonalnych, ale wciąż można je spotkać w rowerach turystycznych i starszych rowerach profesjonalnych. W ostatnich czasach coraz częściej używa się sztyc opuszczanych. Spotyka się je u zawodników wyścigów XC.</p>
 					<hr>
 					<h4 class = "text-center">Tandem</h4>
-					<img class="img-fluid rounded mx-auto d-block" src="rower-tandem.jpg" alt="monocykl" width="460" height="345">
+					<img class="img-fluid rounded mx-auto d-block" src="images/rower-tandem.jpg" alt="monocykl" width="460" height="345">
 					<hr>
 					<p class = "text-justify">Rower przeznaczony dla <mark>dwóch lub więcej</mark> osób, siedzących w układzie jedna za drugą. Typowy tandem ma, tak samo jak rower jednoosobowy, jedną ramę i dwa koła, za to każda z osób ma własne: kierownicę, siodełko i pedały. Zdarzają się jednak także tandemy przeznaczone dla większej liczby osób. Udział w napędzaniu roweru mają obie osoby, natomiast kieruje rowerem zazwyczaj osoba z przodu, aczkolwiek spotykane są rowery specjalistyczne, np. dla osoby dorosłej z dzieckiem, lub dla osoby niepełnosprawnej z opiekunem, gdzie można przełączać kierowanie rowerem, lub też tylko tylna osoba ma taką możliwość. W każdym z tych przypadków osoba niekierująca wykorzystuje wtedy swoją kierownicę tylko jako oparcie dla rąk. W podobny sposób mogą być również rozłączane lub przełączane układy napędu i hamowania. Spotykane są również tandemy, gdzie na tylnej osi są dwa koła, jednak nadal takie pojazdy nazywa się rowerami, a nie wózkami rowerowymi, z uwagi na wydłużony kształt całego pojazdu.</p>
 				</div>
 			</div>
 		</div>
-			<script src="app.js"></script>
+			<script src="js/app.js"></script>
 			<script src="js/jquery.js"></script>
 			<script src="js/bootstrap.js"></script>
 		</body>
