--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
 			<meta http-equiv="X-UA-Compatible" content="IE=edge">
 			<meta name="viewport" content="width=device-width, initial-scale=1">
 			
-			<link rel="manifest" href="manifest.json" />
+			<link rel="manifest" href="manifest.json">
+			<!-- iOS support -->
+			<link rel="apple-touch-icon" href="/images/icons/icon-72x72.png">
+			<link rel="apple-touch-icon" href="/images/icons/icon-96x96.png">
+			<link rel="apple-touch-icon" href="/images/icons/icon-129x128.png">
+			<link rel="apple-touch-icon" href="/images/icons/icon-512x512.png">
+			<meta name="apple-mobile-web-app-status-bar" content="#89f5b1">
 			
 			<script src="https://code.jquery.com/jquery-2.1.3.js" integrity="sha256-goy7ystDD5xbXSf+kwL4eV6zOPJCEBD1FBiCElIm+U8=" crossorigin="anonymous"></script>
 			
